--- a/style.css
+++ b/style.css
@@ -17,9 +17,12 @@ body {
     background: rgba(0, 0, 0, 0.253);
     box-shadow: 0 0 40px #00275A;
     margin-top: 15px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 50px;
     padding-top: 20px;
     padding-bottom: 20px;
-    width: 100%;
+    border-radius:25px;
 }
 
 #mainwrapper {
@@ -28,44 +31,32 @@ body {
     margin: 0 auto;
 }
 
-#menu {
-    background: rgba(0, 0, 0, 0.253);
-    box-shadow: 0 0 40px #00275A;
+#game {
+    display: table;
     text-align: center;
-    margin-top: 15px;
-    padding-top: 10px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    width: 100%;
-}
-
-#youtube {
-    background: rgba(0, 0, 0, 0.253);
-    height: 100%;
-    box-shadow: 0 0 40px #00275A;
-    text-align: center;
-    margin-top: 15px;
-    padding-top: 10px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    margin-top: 8px;
+    padding-top: 30px;
+    border-radius:25px;
     width: 100%;
     height: 100%;
-}
+  }
 
-#optionalinfo {
+#content {
     background: rgba(0, 0, 0, 0.253);
     box-shadow: 0 0 40px #00275A;
     text-align: center;
     margin-top: 15px;
+    margin-left: 100px;
+    margin-right: 100px;
+    border-radius:25px;
     padding-top: 10px;
     padding-top: 20px;
     padding-bottom: 20px;
-    width: 100%;
 }
-
-#long {
+#long{
     text-align: center;
-    width: 70%;
+    margin-left: 300px;
+    margin-right: 300px;
 }
 
 #footer {
