--- a/MazeGame/style.css
+++ b/MazeGame/style.css
@@ -19,6 +19,7 @@ body {
     margin-top: 15px;
     margin-left: 100px;
     margin-right: 100px;
+    margin-bottom: 10px;
     padding-top: 20px;
     padding-bottom: 20px;
     border-radius:25px;
