--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
 
 #content {
     background: rgba(0, 0, 0, 0.253);
-    box-shadow: 0 0 40px #00275A;
+    box-shadow: 0px 0px 40px #00275A;
     text-align: center;
     margin-top: 15px;
     margin-left: 100px;
@@ -63,7 +63,7 @@ body {
     display: flex;
     justify-content: center;
     bottom: 0px;
-    position: absolute;
+    position: fixed;
 }
 
 #description {
@@ -141,7 +141,16 @@ b {
     text-shadow: 1px 1px 2px #000000;
     text-decoration: none;
     font-size: 15px;
-    line-height: 23px;
+    line-height: 28px;
+}
+
+c {
+    color: #ffffff;
+    text-align: center;
+    text-shadow: 1px 1px 2px #000000;
+    text-decoration: none;
+    font-size: 15px;
+    line-height: 28px;
 }
 
 a:hover,
