--- a/MazeGame/style.css
+++ b/MazeGame/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url(background.png);
+    background-image: url(background3.png);
     background-attachment: fixed;
     background-color: #000;
     color: #000;
