--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
 
 h1 {
     color: #EEEDF0;
-    font-size: 44px;
+    font-size: 300%;
     font-weight: normal;
     text-shadow: 1px 1px 2px #A7A7A7;
 }
