--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     margin-top: 23px;
     margin-left: 2%;
     margin-right: 2%;
-    margin-bottom: 50px;
+    margin-bottom: 3%;
 
     padding: 4px;
 
@@ -46,7 +46,7 @@ body {
     margin-top: 23px;
     margin-left: 2%;
     margin-right: 2%;
-    margin-bottom: 50px;
+    margin-bottom: 1%;
 
     padding: 4px;
 
